<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>USER-REALM</name>
	<organization>
		<name>Poznan Supercomputing and Networking Center</name>
		<url>http://www.psnc.pl/</url>
	</organization>
	<groupId>pl.psnc.synat</groupId>
	<artifactId>wrdz-realm</artifactId>
	<version>1.0.1-SNAPSHOT</version>
	<packaging>bundle</packaging>	
	<licenses>
		<license>
			<name>GNU General Public License, Version 3.0</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:https://github.com/psnc-dl/darceo.git</connection>
		<developerConnection>scm:git:git@github.com:psnc-dl/darceo.git</developerConnection>
		<url>http://github.com/psnc-dl/darceo/tree/master/wrdz-realm</url>
	</scm>
	<distributionManagement>
		<repository>
			<id>synat-a11-releases-public</id>
			<uniqueVersion>false</uniqueVersion>
			<url>http://maven.man.poznan.pl/repository/synat-a11-releases-public</url>
		</repository>
		<snapshotRepository>
			<id>synat-a11-snapshots-public</id>
			<uniqueVersion>false</uniqueVersion>
			<url>http://maven.man.poznan.pl/repository/synat-a11-snapshots-public/</url>
		</snapshotRepository>
	</distributionManagement>
	<repositories>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Maven2 Repository</name>
			<url>https://maven.java.net/content/repositories/releases</url>
		</repository>
	</repositories>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>	
	<dependencies>
		<dependency>
			<groupId>org.glassfish.main.extras</groupId>
			<artifactId>glassfish-embedded-all</artifactId>
			<version>3.1.2</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.6</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<optimise>true</optimise>
					<debug>true</debug>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.4.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-ejb-plugin</artifactId>
				<version>2.3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Export-Package>
							${project.groupId}.${project.artifactId};version=${project.version}
						</Export-Package>
						<Import-Package>
							com.sun.appserv.security,
							org.glassfish.security.common,
							com.sun.enterprise.security.auth.realm,
							com.sun.enterprise.security.auth.login.common,
							java.util,
							javax.security.auth,
							com.sun.enterprise.security.auth.login,
							com.sun.enterprise.util.i18n,
							com.sun.logging,
							javax.security.auth.callback,
							javax.security.auth.login,
							javax.security.auth.spi,
							javax.security.auth.x500,
							com.sun.appserv.connectors.internal.api,
							com.sun.enterprise.security.auth.digest.api,
							com.sun.enterprise.security.auth.realm.certificate,
							com.sun.enterprise.security.common,
							com.sun.enterprise.security.web.integration,
							com.sun.enterprise.universal,
							com.sun.enterprise.util,
							javax.sql,
							javax.naming,
							org.jvnet.hk2.annotations,
							org.jvnet.hk2.component,
							org.apache.commons.lang,
							org.apache.commons.codec.binary
						</Import-Package>
					</instructions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>